--- a/styles/style.css
+++ b/styles/style.css
@@ -108,9 +108,10 @@ header{
     border: none;
 }
 .hamburger{
+    background-color: rgb(255, 255, 255);
     display: none;
-    height: 40px;
-    width: 40px;
+    height: 50px;
+    width: 50px;
     border: none;
     border-radius: 8px;
     
@@ -162,13 +163,104 @@ header{
 }
 
 /* main part */
-.section-1{
+.section{
     max-width: 120rem;
-    border-top: 2px dashed rgb(128, 128, 128);
+    border-top: 2px dashed rgb(163, 163, 163);
+  
     
 }
 .section1-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+    margin-top: 60px;
+    margin-bottom: 80px;
+    text-align: center;
+}
+.section1-container{
+    max-width: 100rem;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    
+  
+}
+.sec1-item1{
+    max-width: 22.9rem;
+    max-height: 30rem;
+    order: 0.94px solid rgb(222, 245, 255);
+    border-radius: 18.86px;
+    box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
+    background: linear-gradient(180.00deg, rgb(222, 245, 255),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);
+    justify-items: center;
+    padding: 60px 40px;
+}
+.sec1-item2{
+    max-width: 22.9rem;
+    max-height: 30rem;
+    order: 0.94px solid rgb(255, 244, 220);
+    border-radius: 18.86px;
+    box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
+    background: linear-gradient(180.00deg, rgb(255, 244, 220),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);
+    justify-items: center;
+    padding: 60px 40px;
+}
+.sec1-item3{
+    max-width: 22.9rem;
+    max-height: 30rem;
+    border: 0.94px solid rgb(242, 232, 255);
+    border-radius: 18.86px;
+    box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
+    background: linear-gradient(180.00deg, rgb(238, 225, 255),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);
+    justify-items: center;
+    padding: 60px 40px;
+}
+.item-title{
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+.item-description{
+        font-size: 1rem;
+        font-weight: 500;
+        text-align: center;
+        margin-bottom: 38px;
+        margin-top: 33px;
+}
+.item-btn1{
+    color:rgb(100, 200, 255) ;
+    background-color:rgb(255, 255, 255) ;
+    font-size: 1rem;
+    font-weight: 700;
+    border: none;
+}
 
+.item-btn2{
+    color:rgb(240, 170, 0) ;
+    background-color:rgb(255, 255, 255) ;
+    font-size: 1rem;
+    font-weight: 700;
+    border: none;
+}
+.item-btn3{
+    color: rgb(135, 0, 255);
+    background-color:rgb(255, 255, 255) ;
+    font-size: 1rem;
+    font-weight: 700;
+    border: none;
+}
+.round{
+    text-align: center;
+    margin-top: 80px;
+    margin-bottom:60px ;
+}
+.round-btn{
+    width: 60px;
+    height: 60px;
+    border: none;
+    border-radius: 50px;
+    background-color:rgb(254, 163, 1);
+    color:rgb(255, 255, 255) ;
+    font-size: 24px;
+    font-weight: 900;
 }
 
 
@@ -218,7 +310,20 @@ header{
    .underline{
     display: block;
    }
-   .section-1{
+   .section{
+    display: none;
+   }
+  .sec1-item1 , .sec1-item2 , .sec1-item3 , .section-1{
+    max-width: 100%;
+   }
+   .section1-title{
+    font-size: 2rem;
+   }
+   .section1-container{
+    flex-direction: column;
+    gap: 30px;
+   }
+   .round{
     display: none;
    }
  
