--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@ body{
      max-width: 120rem;
   
 }
-  footer , header{
+  header{
     max-width: 90rem;
     margin: 0 auto;
 }
@@ -267,7 +267,6 @@ body{
 /* section-2 */
 .section-2{
     margin-top: 60px;
-    margin-bottom: 80px;
     background: url(image),linear-gradient(0.00deg, rgba(254, 163, 1, 0.3),rgba(255, 255, 255, 0.3) 100%);
 }
 .section2-title{
@@ -281,7 +280,7 @@ body{
     margin: 0 auto;
     display: flex;
     justify-content:space-evenly;
-    gap:;
+    
    
 }
 .sec2-content1{
@@ -382,6 +381,71 @@ body{
     font-weight: 700;
     border: none;
 }
+/* Footer part */
+footer{
+    background: rgb(127, 214, 255);
+}
+.ftr-container{
+    max-width: 85rem;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    
+  
+   
+    
+}
+.ftr-1  , .ftr-2 , .ftr-3{
+margin-top: 124px;
+margin-bottom: 124px;
+}
+.ftr1-content{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+   
+}
+
+.ftr1-title{
+     max-width: 11rem;
+     max-height: 5rem;
+     font-size: 2rem;
+     font-weight: 700;
+}
+.ftr1-description{
+    max-width: 24.9rem;
+    font-size: 1.25rem;
+    font-weight: 400;
+}
+.ftr2-title{
+        max-width: 9.7rem;
+        font-size: 1.5rem;
+        font-weight: 700;
+
+     
+}
+footer li{
+    list-style: none;
+   
+}
+footer li a{
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    font-size: 1.25rem;
+    font-weight: 400;
+
+}
+footer ul{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+   
+}
+.ftr3-title{
+    font-size: 1.6rem;
+    font-weight: 700;
+}
+
 
 /* media query part */
 @media screen and (max-width:576px) {
@@ -520,6 +584,31 @@ body{
     font-size: .8rem;
    
 }
+    .ftr-container{
+        flex-direction: column;
+        max-width:100%;
+        margin: 0 auto;
+        padding: 0 15px;
     
- 
+     
+    }
+    .ftr1-description{
+        font-size: 1.15rem;
+        
+    }
+    .ftr-2 , .ftr-1 , .ftr-3 {
+       margin: 0;
+      
+    }
+    .ftr-1{
+        margin-top: 40px;
+    }
+    .ftr-3{
+        margin-bottom: 50px;
+    }
+  
+    footer li a{
+        font-size: 1.1rem;
+    }
+    
 }
